install-usb-gui (0.3.7) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 29 Apr 2011 04:54:04 +0200

install-usb-gui (0.3.6) unstable; urgency=low

  * bump standards version to 3.9.2, no changes necessary.
  * update eMail addresses.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 29 Apr 2011 04:52:38 +0200

install-usb-gui (0.3.5) unstable; urgency=low

  * fix hjt's mail address.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 06 Oct 2010 16:50:39 +0200

install-usb-gui (0.3.4) unstable; urgency=low

  * fix x-un-i's mail address.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 06 Oct 2010 14:58:03 +0200

install-usb-gui (0.3.3) unstable; urgency=low

  * import revised icons from detaos.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 09 Sep 2010 04:33:30 +0200

install-usb-gui (0.3.2) unstable; urgency=low

  * fix yet another graphics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 01 Sep 2010 01:34:18 +0200

install-usb-gui (0.3.1) unstable; urgency=low

  * fix yet another graphics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 01 Sep 2010 01:02:31 +0200

install-usb-gui (0.3.0) unstable; urgency=low

  * adapt to aptosid.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 29 Aug 2010 20:43:21 +0200

install-usb-gui (0.2.36) unstable; urgency=low

  * drop "menu" from Recommends.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 21 Aug 2010 23:44:11 +0200

install-usb-gui (0.2.35) unstable; urgency=low

  * switch to compat level 8.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 04:42:18 +0200

install-usb-gui (0.2.34) unstable; urgency=low

  * bump standards version to 3.9.1, no changes necessary.
  * elaborate long description a bit further, to make lintian happy.
  * regenerate icons.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 03 Aug 2010 22:14:18 +0200

install-usb-gui (0.2.33) unstable; urgency=low

  * switch to dpkg-source 3.0 (native) format.